# text2sql-framework

./: .env.example  .gitignore  CLAUDE.md  IDEAL_DATABASE.md  IMPROVEMENTS.md  README.md  UI_DESIGN_BRIEF.md  alembic.ini  bird_financial_benchmark.md  bird_financial_report.md  compose.yml  langgraph.json  pyproject.toml  studio_graph.py  traces_bird_financial_opus.jsonl  traces_bird_financial_opus_v2.jsonl
.github/ISSUE_TEMPLATE/: use-case.yml
.langgraph_api/: .langgraph_ops.pckl
api/: README.md  __init__.py  auth.py  db.py  engine.py  main.py  models.py
api/jobs/: ingest.py
api/migrations/: env.py
api/migrations/versions/: 001_initial.py
api/routers/: ask.py  conversations.py  health.py  ingest.py
db/: README.md  apply_migrations.py
db/migrations/: 0001_schemas_and_roles.sql  0002_tenant_config.sql  0003_dimensions.sql  0004_facts.sql  0005_views_entity.sql  0006_views_metrics.sql  0007_seeds.sql  0008_grants.sql
docs/: architecture-plan.md  security-analysis.md
etl/: README.md  __init__.py  altocontrol_bronze_schema.sql  altocontrol_entity_config.py  altocontrol_gold_views.sql  altocontrol_silver_schema.sql  apply_altocontrol_gold.py  bronze.py  bronze_schema.sql  entity_resolution.py  entity_resolution.sql  extract_altocontrol.md  extract_altocontrol.py  gold.py  load_altocontrol_bronze.py  pipeline.py  run_demo.py  silver.py  silver_schema.sql  synth.py  transform_altocontrol_silver.py
examples/: canonical.md  penicor_canonical.md  penicor_demo.py  penicor_scenarios.md  with_langchain.py
reports/: internal_validation.md
tests/: test_agent.py  test_api.py  test_business_features.py  test_canonical.py  test_core.py  test_middleware.py  test_synth.py
text2sql/: __init__.py  agent.py  agent_langchain.py  canonical.py  connection.py  core.py  generate.py  middleware.py  numeric_guard.py  semantic_cache.py  subagents.py  tools.py  tracing.py
tools/: build_validation_report.py  diagnose_data_gaps.py  internal_validation.py
