[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "text2sql"
version = "0.2.0"
description = "Text-to-SQL framework with tool-based schema retrieval. Built on LangChain Deep Agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Cooper Penniman" },
]
keywords = ["sql", "llm", "text-to-sql", "ai", "database", "natural-language", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "deepagents>=0.4",
    "sqlalchemy>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = ["langchain-openai>=0.3"]
anthropic = ["langchain-anthropic>=0.3"]
dashboard = ["httpx>=0.27"]
all = ["langchain-openai>=0.3", "langchain-anthropic>=0.3", "httpx>=0.27"]
dev = ["pytest>=7.0"]

[project.scripts]
text2sql = "text2sql.cli:main"

[project.urls]
Homepage = "https://github.com/cooperpenniman/text2sql"
Repository = "https://github.com/cooperpenniman/text2sql"

[tool.hatch.build.targets.wheel]
packages = ["text2sql"]
