[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "text2sql-framework"
version = "0.3.0"
description = "Framework-agnostic text-to-SQL with tool-based schema retrieval and a native agent loop (raw Anthropic/OpenAI SDKs). LangChain optional."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Cooper Penniman" },
]
keywords = ["sql", "llm", "text-to-sql", "ai", "database", "natural-language", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "sqlalchemy>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.50"]
anthropic = ["anthropic>=0.40"]
dashboard = ["httpx>=0.27"]
# Legacy deepagents/LangChain backend (agent_backend="langchain") + Text2SqlMiddleware.
# Includes both provider integrations since agent_langchain.py and create_agent()
# resolve models via LangChain's own ChatAnthropic/ChatOpenAI, not the raw SDKs above.
langchain = [
    "deepagents>=0.1",
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "langchain>=1.0",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.3",
]
all = [
    "anthropic>=0.40",
    "openai>=1.50",
    "httpx>=0.27",
    "deepagents>=0.1",
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "langchain>=1.0",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.3",
]
dev = ["pytest>=7.0"]

[project.scripts]
text2sql = "text2sql.cli:main"

[project.urls]
Homepage = "https://github.com/Text2SqlAgent/text2sql-framework"
Repository = "https://github.com/Text2SqlAgent/text2sql-framework"

[tool.hatch.build.targets.wheel]
packages = ["text2sql"]
